# socket-server

./: .clang-format  .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.MD  mio.excalidraw
src/: reqh.c  reqh.h  server.c  server.h  utils.c  utils.h
